<resources>
    <string name="app_name">GoGamificationQuiz</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña (opcional)</string>
    <string name="action_sign_in">Ingresa o registrate</string>
    <string name="action_sign_in_short">Registrarse</string>
    <string name="error_invalid_email">Esta direccion de correo es invalida</string>
    <string name="error_invalid_password">Esta contraseña es muy corta</string>
    <string name="error_incorrect_password">Esta contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="item_title"> </string>
    <string name="item_desc"> </string>

    <!-- INICIO STRINGS CUESTIONARIO -->

    <string name="nombre_pregunta_1">PREGUNTA 1</string>
    <string name="pregunta_1">Es un componente de interfaz de usuario que puede mostrar ya sea pagina web remotos o HTML estático:</string>
    <string name="boton_siguiente">SIGUIENTE</string>
    <string name="indicaciones">INDICACIONES GENERALES</string>
    <string name="confirmacion">Si estás listo para iniciar el cuestionario presiona "COMENZAR"</string>
    <string name="empezar_cuestionario">COMENZAR</string>
    <string name="resultado">RESULTADO</string>
    <string name="informacion_resultado">Respondiste correctamente 18 de 20 preguntas</string>
    <string name="guardar_continuar">GUARDAR Y CONTINUAR</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <!-- INICIO STRINGS LEADERBOARDS -->
    <string name="Lideres">Tabla de Lideres</string>
    <!-- FIN STRINGS LEADERBOARDS -->

    <string name="btn_cancel">Cancelar</string>
    <string name="btn_asignar_todos">Asignar a todos</string>
    <string name="btn_ok">Entendido</string>

    <string name="InfoAsis">Al dar click sobre el punto puede asignar puntos de asistencia</string>
    <string name="InfoPart">Al dar click sobre la mano puede asignar puntos de participacion</string>


</resources>
