<?xml version="1.0" encoding="utf-8"?>

<!-- Aqui se declara el contenido de la activity_cuestionario -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cuestionario"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Pantallas.CuestionarioActivity"
    tools:showIn="@layout/activity_cuestionario"
    android:weightSum="1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/borde"
        android:weightSum="1"
        android:layout_weight="0.93">

        <TextView
            android:layout_width="331dp"
            android:layout_height="74dp"
            android:text="@string/indicaciones"
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:textSize="@dimen/indicaciones"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.43" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/pregunta_1"
            android:textSize="@dimen/contenido_preguntas"
            android:layout_weight="1.04" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="10dp"
        android:layout_height="10dp">
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borde">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/confirmacion"
            android:textSize="@dimen/confirmacion"
            android:textAlignment="center"
            android:id="@+id/textView4"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empezar_cuestionario"
            android:id="@+id/button2"
            android:onClick="empezarCuestionario"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>