<?xml version="1.0" encoding="utf-8"?>

<!-- Aqui se muestra el contenido de activity_resultado -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cuestionario"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Pantallas.ResultadoActivity"
    tools:showIn="@layout/activity_resultado"
    android:weightSum="1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/borde"
        android:layout_weight="0.46">

        <TextView
            android:layout_width="331dp"
            android:layout_height="74dp"
            android:text="@string/resultado"
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:textSize="@dimen/titulo_preguntas"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/informacion_resultado"
            android:textSize="@dimen/informacion_resultado" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="10dp"
        android:layout_height="30dp">
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borde">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar_continuar"
            android:id="@+id/button3"
            android:onClick="salirCuestionario"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</LinearLayout>